--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -59,6 +59,8 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="Forward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="Forward",Scale=1.000000,Key=Up)
++AxisMappings=(AxisName="Left",Scale=1.000000,Key=A)
++AxisMappings=(AxisName="Left",Scale=1.000000,Key=None)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
