--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -48,19 +48,12 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Quit",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Gamepad_Special_Left)
 +ActionMappings=(ActionName="Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
 +ActionMappings=(ActionName="Forward?",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=W)
-+AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
-+AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=Gamepad_RightY)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Gamepad_LeftTriggerAxis)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Gamepad_RightTriggerAxis)
-+AxisMappings=(AxisName="Left Track Throttle",Scale=1.000000,Key=Left)
-+AxisMappings=(AxisName="Right Track Throttle",Scale=1.000000,Key=Right)
++ActionMappings=(ActionName="Swap Cam",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
 +AxisMappings=(AxisName="Forward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
-+AxisMappings=(AxisName="Forward",Scale=1.000000,Key=Up)
 +AxisMappings=(AxisName="Left",Scale=1.000000,Key=A)
-+AxisMappings=(AxisName="Left",Scale=1.000000,Key=None)
++AxisMappings=(AxisName="Right",Scale=1.000000,Key=D)
++AxisMappings=(AxisName="AimAzimuth",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="AimElevation",Scale=1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
